signing up implemented

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@
             <a th:href="@{~/login}">Login</a>
         </div>
         <div class="container">
-            <a th:href="@{~/users/signup}">Sign up User</a>
+            <a th:href="@{~/users/signUp}">Sign up User</a>
         </div>
     </div>
 </div>
