--- a/src/main/resources/templates/signUp.html
+++ b/src/main/resources/templates/signUp.html
@@ -16,7 +16,64 @@
             <div class="row">
                 <div class="col-sm-4 sign-up--form order-first order-lg-last">
                     <div class="row">
-                          <!--Form should be here-->
+                        <form accept-charset="UTF-8" method="post" th:href="@{~/users/signUp}" th:object="${user}">
+
+                            <div th:if="${#fields.hasErrors('firstName')}"
+                                 th:errors="*{firstName}"
+                                 class="validation-message alert alert-danger" role="alert"></div>
+
+                            <div th:if="${#fields.hasErrors('lastName')}"
+                                 th:errors="*{lastName}"
+                                 class="validation-message alert alert-danger" role="alert"></div>
+
+                            <div th:if="${#fields.hasErrors('email')}"
+                                 th:errors="*{email}"
+                                 class="validation-message alert alert-danger" role="alert"></div>
+
+                            <div th:if="${#fields.hasErrors('password')}"
+                                 th:errors="*{password}"
+                                 class="validation-message alert alert-danger" role="alert">
+
+                            </div>
+                            <div th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}"
+                                 class="validation-message alert alert-danger" role="alert"></div>
+
+                            <div class="form-group py-2">
+                                <label for="firstName">First name</label>
+                                <input id="firstName" type="text" class="form-control" th:field="*{firstName}" autocomplete="off" required>
+                               <label th:if="${#fields.hasErrors('firstName')}"
+                                      th:errors="*{firstName}" class="validation-message">Error</label>
+                           </div>
+                            <div class="form-group">
+                                <label for="lastName">Last name</label>
+                                <label th:if="${#fields.hasErrors('lastName')}"
+                                       th:errors="*{lastName}" class="validation-message"></label>
+                                <input id="lastName" type="text" class="form-control" th:field="*{lastName}" autocomplete="off" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="email">Mail</label>
+                                <label th:if="${#fields.hasErrors('email')}"
+                                       th:errors="*{email}" class="validation-message"></label>
+                                <input id="email" type="text" class="form-control" th:field="*{email}" autocomplete="off" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="password">Password</label>
+                                <label th:if="${#fields.hasErrors('password')}"
+                                       th:errors="*{password}" class="validation-message"></label>
+                                <input id="password" type="text" class="form-control" th:field="*{password}"  autocomplete="off" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="confirmPassword">Confirm password</label>
+                                <label th:if="${#fields.hasErrors('confirmPassword')}"
+                                       th:errors="*{confirmPassword}" class="validation-message"></label>
+                                <input id="confirmPassword" type="text" class="form-control" th:field="*{confirmPassword}" autocomplete="off" required>
+                            </div>
+                            <div class="container text-center py-4">
+                                <button type="submit" class="button btn-lg"
+                                        data-loading-text="Create employee...">SUBMIT
+                                </button>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
