--- a/src/main/resources/static/css/application.css
+++ b/src/main/resources/static/css/application.css
@@ -29,7 +29,7 @@ input[type=text]:focus {
 	border-radius: 5px;
 }
 
-input[type=submit]{
+input[type=submit], .my_button{
 	font-size: 16px;
 	color: #ffffff;
 	background-color: #FF6600;
