added welcome, signIn and signUp controllers

--- a/src/main/resources/templates/signInPage.html
+++ b/src/main/resources/templates/signInPage.html
@@ -10,15 +10,16 @@
 
 <body>
 <div class="input_box">
-    <form action="#" th:action="@{/lelek_task/sign_up}" th:object="${user}" method="post">
+    <form action="#" th:action="@{/lelek_task/sign_in}" th:object="${user}" method="post">
         <label for="email">Email</label>
         <input type="text" th:field="*{email}" id="email" placeholder="Enter email">
-        <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
+<!--        <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>-->
         <label for="password">Password</label>
-        <input type="text" th:field="*{password}" id="password" placeholder="Enter password">
+        <input type="text" name="password" id="password" placeholder="Enter password">
+        <p style="color: red" class="message" th:text="${message}"></p><br>
         <input type="submit" value="Sign in">
     </form>
-    <p style="color: #ffffff">If You have no account <a href="http://localhost:8081/lelek_task/sign_up"
+    <p style="color: #ffffff">If You have no account <a href="/lelek_task/sign_up"
     style="color: #3AE2CE">Sign Up</a></p>
 </div>
 </body>
