--- a/src/main/resources/templates/403Page.html
+++ b/src/main/resources/templates/403Page.html
@@ -4,14 +4,13 @@
 
 <head>
     <meta charset="utf-8"/>
-    <title>Thymeleaf app</title>
+    <title>Access denied</title>
     <link th:href="@{/css/application.css}" rel="stylesheet">
 </head>
 
 <body>
-<div th:insert="~{header}"></div>
 <div class="input_box">
-    <h1>Admin</h1>
+    <H1 style="color: #ffffff">Access denied</H1>
 </div>
 </body>
 </html>
