--- a/src/main/resources/static/css/application.css
+++ b/src/main/resources/static/css/application.css
@@ -1,3 +1,10 @@
+.header{
+    position: fixed;
+    height: 60px;
+    width: 100%;
+    background-color: #FF9500;
+}
+
 .input_box{
 	text-align: center;
 	margin-left: 25%;
@@ -34,6 +41,17 @@ input[type=submit], .my_button{
 	color: #ffffff;
 	background-color: #FF6600;
 	width: 40%;
+	padding: 12px 20px;
+	margin: 8px 0;
+	border-radius: 5px;
+	box-sizing: border-box;
+}
+
+.header_button{
+	font-size: 16px;
+	color: #ffffff;
+	background-color: #FF6600;
+	width: 120px;
 	padding: 12px 20px;
 	margin: 8px 0;
 	border-radius: 5px;
