--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -10,17 +10,15 @@
 
 <body>
 <div class="input_box">
-    <form action="#" th:action="@{/lelek_task/sign_in}" th:object="${user}" method="post">
+    <form id="sign_in" th:action="@{/login}" method="post" th:object="${user}">
         <label for="email">Email</label>
-        <input type="text" th:field="*{email}" id="email" placeholder="Enter email">
-<!--        <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>-->
+        <input type="text" name="username" id="email" placeholder="Enter email">
         <label for="password">Password</label>
         <input type="text" name="password" id="password" placeholder="Enter password">
-        <p style="color: red" class="message" th:text="${message}"></p><br>
         <input type="submit" value="Sign in">
     </form>
-    <p style="color: #ffffff">If You have no account <a href="/lelek_task/sign_up"
-    style="color: #3AE2CE">Sign Up</a></p>
+    <p style="color: #ffffff">If You have no account <a href="/register"
+                                                        style="color: #3AE2CE">Sign up here</a></p>
 </div>
 </body>
 </html>
