--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,15 +18,8 @@
         <div class="container">
             <h3 class="text-center display-4 font-weight-bold pt-5 text-success">Thymeleaf course</h3>
         </div>
-
         <div class="container">
-            <a th:href="@{~/syntax/example}"> Thymeleaf syntax</a>.
-        </div>
-        <div class="container">
-            <a th:href="@{~/login}">Login</a>
-        </div>
-        <div class="container">
-            <a th:href="@{~/users/signup}">Sign up User</a>
+            <a th:href="@{~/users/signUp}">Sign up User</a>
         </div>
     </div>
 </div>
