--- a/src/main/resources/templates/homework/user-create.html
+++ b/src/main/resources/templates/homework/user-create.html
@@ -11,6 +11,7 @@
         -moz-background-size: cover;
         -o-background-size: cover;
         background-size: cover;
+        margin: 15px;
     }
 
     * {
